# jgrestic

./: .gitignore  .mypy.ini  CMakeLists.txt  Makefile  common.nix  default.nix  flake.nix  lint  setup.py  shell.nix
jgrestic/: backup.py  commands.py  init_repo.py  main.py  restic_files.py
src/jgrestic/: .gitignore  backup.py  commands.py.in  config.py  enter.py  init.py  init_repo.py  main.py  restic_files.py
support/: gen_command_bindings.py  python_install.py  run.in
